--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>All About Ginny Lennon</h1>
+<p>Here's where I will tell all about myself.</p>
+  
 
 </body>
 </html>
