--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,9 @@
 <title>About Me</title>
 </head>
 <body>
-
+<body style="background-color:powderblue;">
 <h1>All About Ginny Lennon</h1>
+  <h2>Here's where I will tell all about myself.</h2>
 <p>Here's where I will tell all about myself.</p>
   
 
