--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,8 @@
 <body style="background-color:powderblue;">
 <h1>All About Ginny Lennon</h1>
   <h2>Here's where I will tell all about myself.</h2>
-<p>Here's where I will tell all about myself.</p>
+  <a href="https://www.w3schools.com">I am learning to code at w3schools</a>
+<p>I am a teacher and a learner.</p>
   
 
 </body>
